# handmadehero

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug_stuff.c  debug_stuff.h  globals.c  globals.h  handmade_penguin_renderer.c  hero.c  hero.h  logic.c  logic.h  obsolete.c  platform.c  platform.h  tile.c  tile.h
Handmade Hero/Handmade Hero/: main.c
Handmade Hero/Handmade Hero.xcodeproj/: project.pbxproj
Handmade Hero/Handmade Hero.xcodeproj/project.xcworkspace/xcuserdata/slice.xcuserdatad/: UserInterfaceState.xcuserstate
data/: README.md
sdl/: README.md
